[package]
name = "noire"
version = "0.1.0"
authors = ["Sebastian Ziebell"]
keywords = ["noire", "gl", "3d", "graphics"]
repository = "https://github.com/justahero/noire-rs.git"
edition = "2018"

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true

[[example]]
name = "spinningcube"
path = "examples/01-spinning-cube/main.rs"

[[example]]
name = "triangles"
path = "examples/02-triangles/main.rs"

[[example]]
name = "raymarching"
path = "examples/03-raymarching/main.rs"

[[example]]
name = "spotlight"
path = "examples/04-spotlight/main.rs"

[[example]]
name = "worley-noise"
path = "examples/05-worley-noise/main.rs"

[[example]]
name = "opensimplex"
path = "examples/06-opensimplex/main.rs"

[[example]]
name = "filewatch"

[dependencies]
backtrace   = "0.3.46"
cgmath      = "0.17.0"
gl          = "0.14.0"
glfw        = "0.37.0"
lazy_static = "1.4.0"
notify      = "4.0.15"
rand        = "0.7.3"
rand_chacha = "0.2.2"
regex       = "1.3.6"
