[package]
name = "noire"
version = "0.1.0"
authors = ["Sebastian Ziebell"]
keywords = ["noire", "gl", "3d", "graphics"]
repository = "https://github.com/justahero/noire-rs.git"
edition = "2018"
license = "MIT"

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true

[[example]]
name = "spinningcube"
path = "examples/01-spinning-cube/main.rs"

[[example]]
name = "triangles"
path = "examples/02-triangles/main.rs"

[[example]]
name = "raymarching"
path = "examples/03-raymarching/main.rs"

[[example]]
name = "spotlight"
path = "examples/04-spotlight/main.rs"

[[example]]
name = "worley-noise"
path = "examples/05-worley-noise/main.rs"

[[example]]
name = "opensimplex"
path = "examples/06-opensimplex/main.rs"

[[example]]
name = "marching-squares"
path = "examples/07-marching-squares/main.rs"

[[example]]
name = "circle-noise"
path = "examples/08-circle-noise/main.rs"

[[example]]
name = "metaballs"
path = "examples/09-metaballs/main.rs"

[[example]]
name = "filewatch"

[dependencies]
app         = {path="src/app", version="0.1.0"}
backtrace   = "0.3.46"
cgmath      = "0.17.0"
futures     = "0.3.5"
gl          = "0.14.0"
glfw        = "0.37.0"
image       = "0.23.8"
notify      = "4.0.15"
opensimplex = {path="src/opensimplex", version="0.1.0"}
rand        = "0.7.3"
rand_chacha = "0.2.2"
renderer    = {path="src/renderer", version="0.1.0"}
regex       = "1.3.6"
utils       = {path="src/utils", version="0.1.0"}
# TODO try to not expose this directly
wgpu        = "0.6.0"
window      = {path="src/window", version="0.1.0"}
# TODO try to remove from here?
winit       = { version = "0.22.2", package = "cart-tmp-winit", default-features = false }
