[package]
name = "renderer"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Ziebell"]
license = "MIT"

[dependencies]
bitflags = "1.2.1"
bytemuck = "1.4.1"
shaderc = { version = "0.6.2" }
spirv-reflect = "0.2.3"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
wgpu = "0.6.0"
window = { path = "../window", version = "0.1.0" }
winit = { version = "0.22.2", package = "cart-tmp-winit", default-features = false }
