[package]
name = "renderer"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Ziebell"]

[dependencies]
bevy_ecs = "0.2.1"
bitflags = "1.2.1"
bytemuck = "1.4.1"
futures = "0.3.5"
resources = { path = "../resources", version = "0.1.0" }
shaderc = { version = "0.6.2" }
spirv-reflect = "0.2.3"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
wgpu = "0.6.0"
winit = "0.23.0"
