[package]
name = "window"
version = "0.1.0"
edition = "2018"
authors = ["Sebastin Ziebell"]
description = "Window creation and handling for Noire"
license = "MIT"

[[example]]
name = "helloworld"
path = "examples/helloworld.rs"

[dependencies]
env_logger = "0.7.1"
log = "0.4.11"
once_cell = "1.4.1"
winit = { version = "0.22.2", package = "cart-tmp-winit", default-features = false }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
